k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio

  template:
    metadata:
      labels:
        app: portfolio

    spec:
      containers:
      - name: portfolio
        image: 485626261953.dkr.ecr.ap-south-1.amazonaws.com/shopwave:latest
        ports:
        - containerPort: 80
