k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service

spec:
  type: LoadBalancer

  selector:
    app: portfolio

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
